--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Ramya Pure Nati Koli Farm</title>
+<link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/7412/7412125.png" type="image/x-icon">
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet">
 <style>
   /* CSS Custom Properties for consistent theming */
@@ -565,21 +566,21 @@
     
     <div class="image-grid">
       <div class="image-card">
-        <img src="https://cdn.pixabay.com/photo/2017/11/06/17/23/chickens-2924492_1280.jpg" alt="Native chickens roaming freely" />
+        <img src="https://cdn.pixabay.com/photo/2019/11/29/20/07/cock-4662055_1280.jpg" alt="Native chickens roaming freely" />
         <div class="image-card-content">
           <h3>Free-Range Living</h3>
           <p>Our chickens roam freely in natural environments, ensuring their well-being and natural behavior.</p>
         </div>
       </div>
       <div class="image-card">
-        <img src="https://cdn.pixabay.com/photo/2018/02/12/10/56/broiler-3149322_1280.jpg" alt="Healthy native chickens" />
+        <img src="https://cdn.pixabay.com/photo/2018/08/15/11/49/chicken-3607867_1280.jpg" alt="Healthy native chickens" />
         <div class="image-card-content">
           <h3>Healthy & Natural</h3>
           <p>Raised without hormones or antibiotics, our chickens grow naturally in a stress-free environment.</p>
         </div>
       </div>
       <div class="image-card">
-        <img src="https://cdn.pixabay.com/photo/2017/07/23/20/55/chicken-2535433_1280.jpg" alt="Pure nati poultry" />
+        <img src="https://cdn.pixabay.com/photo/2020/03/16/19/43/chicken-4938114_960_720.jpg" alt="Pure nati poultry" />
         <div class="image-card-content">
           <h3>Pure Native Breed</h3>
           <p>We maintain authentic native chicken breeds, preserving traditional farming heritage.</p>
