--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
     color: var(--text-dark);
     line-height: 1.7;
     font-size: 16px;
-    overflow-x: hidden;
     width: 100%;
     max-width: 100vw;
+    overflow-x: hidden;
+    margin: 0;
+    padding: 0;
   }
 
   /* Modern header with gradient */
@@ -151,7 +153,7 @@
   main {
     max-width: 1200px;
     margin: 0 auto;
-    padding: 3rem 1rem 6rem;
+    padding: 2rem 1rem 4rem;
     width: 100%;
     box-sizing: border-box;
   }
@@ -220,10 +222,11 @@
   /* Modern card-based image grid */
   .image-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 2rem;
     margin-top: 3rem;
     width: 100%;
+    box-sizing: border-box;
   }
 
   .image-card {
@@ -271,10 +274,11 @@
   /* Modern features list */
   .features-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
     gap: 2rem;
     margin-top: 3rem;
     width: 100%;
+    box-sizing: border-box;
   }
 
   .feature-card {
@@ -322,7 +326,7 @@
   /* Modern contact form */
   .contact-section {
     background: var(--warm-white);
-    padding: 2rem 1rem;
+    padding: 1.5rem 1rem;
     border-radius: var(--border-radius);
     box-shadow: var(--shadow-lg);
     margin-top: 3rem;
@@ -359,6 +363,9 @@
     transition: var(--transition);
     background: var(--light-cream);
     box-sizing: border-box;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
   }
 
   .form-group input:focus,
@@ -430,10 +437,6 @@
 
   /* Responsive design */
   @media (max-width: 768px) {
-    body {
-      font-size: 14px;
-    }
-
     .nav-container {
       padding: 0 1rem;
     }
@@ -485,7 +488,7 @@
     }
 
     main {
-      padding: 2rem 1rem 4rem;
+      padding: 1.5rem 0.75rem 3rem;
     }
 
     .hero-content {
@@ -495,27 +498,27 @@
     .hero {
       height: 50vh;
       min-height: 300px;
-      margin-left: 0;
-      margin-right: 0;
+      margin: 0 0 3rem 0;
+      border-radius: 8px;
     }
 
     .image-grid {
-      grid-template-columns: 1fr;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
       gap: 1.5rem;
-      margin-left: 0;
-      margin-right: 0;
+      margin: 2rem 0 0 0;
+      padding: 0;
     }
 
     .features-grid {
-      grid-template-columns: 1fr;
+      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
       gap: 1.5rem;
-      margin-left: 0;
-      margin-right: 0;
+      margin: 2rem 0 0 0;
+      padding: 0;
     }
 
     .contact-section {
-      padding: 1.5rem 1rem;
-      margin: 2rem 0 0;
+      padding: 1rem 0.75rem;
+      margin: 1.5rem 0 0 0;
       border-radius: var(--border-radius);
     }
 
@@ -524,21 +527,14 @@
     }
 
     section p {
-      padding: 0 0.5rem;
+      padding: 0;
+      margin: 0 auto 2rem;
     }
   }
 
   @media (max-width: 480px) {
-    * {
-      max-width: 100%;
-    }
-
-    body {
-      font-size: 14px;
-    }
-
     main {
-      padding: 1.5rem 0.75rem 3rem;
+      padding: 1rem 0.5rem 2rem;
     }
 
     header h1 {
@@ -547,7 +543,7 @@
     }
 
     .hero-content {
-      padding: 1rem 0.75rem;
+      padding: 1rem 0.5rem;
     }
 
     .hero h2 {
@@ -561,34 +557,37 @@
     .image-grid {
       grid-template-columns: 1fr;
       gap: 1rem;
-      margin: 2rem 0 0;
+      margin: 1.5rem 0 0 0;
+      padding: 0;
     }
 
     .features-grid {
       grid-template-columns: 1fr;
       gap: 1rem;
-      margin: 2rem 0 0;
+      margin: 1.5rem 0 0 0;
+      padding: 0;
     }
 
     .contact-section {
-      padding: 1rem 0.75rem;
-      margin: 1.5rem 0 0;
+      padding: 1rem 0.5rem;
+      margin: 1rem 0 0 0;
     }
 
     .form-group input,
     .form-group textarea {
-      padding: 0.75rem;
+      padding: 0.75rem 0.5rem;
       font-size: 16px; /* Prevents zoom on iOS */
     }
 
     section h2 {
       font-size: 1.75rem;
-      padding: 0 0.5rem;
+      padding: 0;
     }
 
     section p {
       font-size: 1rem;
-      padding: 0 0.75rem;
+      padding: 0;
+      margin: 0 auto 1.5rem;
     }
   }
 
