--- a/index.html
+++ b/index.html
@@ -73,8 +73,11 @@
     padding: 1.5rem 1rem;
     text-align: center;
     color: white;
-    position: sticky;
+    position: fixed; /* Change from sticky to fixed */
     top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
     z-index: 1001;
     overflow: hidden;
     backdrop-filter: blur(10px);
@@ -90,9 +93,16 @@
 
   /* Make nav stick below header */
   nav {
-    position: sticky;
-    top: 0; /* header renders first; flow keeps nav below header */
+    position: fixed; /* Change from sticky to fixed */
+    top: 60px; /* Height of header */
+    left: 0;
+    right: 0;
+    width: 100%;
     z-index: 1000;
+    background: var(--warm-white);
+    border-bottom: 1px solid var(--border-light);
+    backdrop-filter: blur(10px);
+    box-shadow: var(--shadow-sm);
   }
 
   /* Prevent anchor targets from hiding under sticky bars */
@@ -178,8 +188,10 @@
 
   /* Main content container */
   main {
+    margin-top: 120px; /* Add top margin to account for fixed header + nav */
     max-width: 1200px;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
     padding: 1.5rem 1rem 3rem;
     width: 100%;
     box-sizing: border-box;
@@ -687,21 +699,6 @@
     .contact-section {
       padding: 1rem 0.75rem;
       margin-top: 1rem;
-    }
-
-    .form-group input,
-    .form-group textarea {
-      padding: 0.75rem;
-      font-size: 16px; /* Prevents zoom on iOS */
-    }
-
-    footer {
-      padding: 1rem 0.5rem;
-    }
-
-    footer p {
-      font-size: 0.85rem;
-      line-height: 1.4;
     }
   }
 
